--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<img src="./4.1+Webpages/4.1 Webpages/assets/images/Henry(New Circular Profile Picture).jpg" alt="picture of me"/>
+<img src="./Henry(New Circular Profile Picture).jpg" alt="picture of me"/>
 <h1>Contact Me</h1>
 <p>Phone: 410-979-3008</p>
 <p>Email: htdjomgoue@gmail.com</p>
